# MightyNetworkAutoclick

./: .gitignore  LICENSE  README.md  autoclick.py  email_data_load.py  load_2_excel.py  pyproject.toml
src/mightynetworkautoclick/: __init__.py
