[project]
name = "mightynetworkautoclick"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexander Kwok", email = "alexanderkwok17@msn.com" }
]
dependencies = [
    "selenium>=4.23.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mightynetworkautoclick"]
