[project]
name = "mightynetworkautoclick"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexander Kwok", email = "alexanderkwok17@msn.com" }
]
dependencies = [
    "yml>=0.0.1",
    "imap-tools>=1.7.2",
    "pyyaml>=6.0.2",
    "selenium>=4.23.1",
    "google>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mightynetworkautoclick"]
